# tector

./: Makefile.am  README.md  configure.ac
src/: bundle.c  bundle.h  corpus.c  corpus.h  exp.h  file.c  file.h  filter.c  filter.h  hash.c  hash.h  linalg.h  log.h  macros.h  main_filter.c  main_model.c  main_vocab.c  mem.c  mem.h  model.c  model.h  model_glove.c  model_nn.c  model_svd.c  ngram.h  program.c  program.h  scanner.c  scanner.h  stem.c  stem.h  stopwords.h  string.c  string.h  train.c  vocab.c  vocab.h
src/core/: bundle.c  bundle.h  corpus.c  corpus.h  exp.c  exp.h  file.c  file.h  filter.c  filter.h  hash.c  hash.h  linalg.c  linalg.h  log.h  macros.h  mem.c  mem.h  model.c  model.h  model_glove.c  model_nn.c  model_svd.c  neural_network.c  neural_network.h  ngram.c  ngram.h  options.c  options.h  program.c  program.h  rand.c  rand.h  scanner.c  scanner.h  serialize.c  serialize.h  stem.c  stem.h  stopwords.c  (+5 more)
tests/: corpus.c  file.c  filter.c  linalg.c  load.c  neural_network.c  options.c  scanner.c  vocab.c
tests/testdata/: corpus.txt  scanner_clean.txt  scanner_dirty.txt  scanner_large.txt  vocab.txt
